# gazpacho

./: Cargo.toml
src/: daemon.rs  db.rs  lib.rs  utils.rs
src/daemon/: config.rs  context.rs  destination.rs  ensured.rs  logging.rs  strategy.rs  system.rs
src/daemon/strategy/: full.rs  incremental.rs
src/daemon/system/: actors.rs  futures.rs  messages.rs
src/daemon/system/actors/: destination_agent.rs  destination_manager.rs  lifecycle.rs  maid.rs  task_manager.rs  task_registry.rs  zfs_manager.rs
src/daemon/system/actors/task_manager/: errors.rs  messages.rs  repository.rs  steps.rs
src/daemon/system/futures/: task_future.rs
src/daemon/system/messages/: destination_manager.rs  lifecycle.rs  maid.rs  signals.rs  task_manager.rs  zfs_manager.rs
src/db/: task_manager.rs
src/db/task_manager/: v1_create_task_log.rs  v2_create_step_log.rs  v3_reset_count.rs
src/db/task_registry/: V1__create_snapshots.rs  mod.rs  v1_create_snapshots.rs
