[package]
name = "gazpacho"
version = "0.1.0"
authors = ["Andrey Cherkashin <andoriyu@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
filedescriptor = "0.7.1"
getset = "0.1.0"
libc = "0.2.68"
libzetta = "0.2.1"
regex = "1"
slog = "2"
slog-async = "2.5.0"
slog-syslog = "0.12.0"
slog-term = "2"
slog-stdlog = "4.0.0"
ssh2 = "0.8.0"
strum = "0.18.0"
strum_macros = "0.18.0"
uclicious = "0.1.2"
zstd = { version = "0.5.1", default-features = false }
zstd-sys = { version = "1.4.15", default-features = false, features = ["pkg-config", "zstdmt"] }
once_cell = "1.3.1"
actix = "0.10.0-alpha.2"
ctrlc = "3.1.4"
rusqlite = { version = "0.21.0", features = ["bundled", "chrono"] }
refinery =  { version = "0.2.1", features = ["rusqlite"] }
refinery-migrations = { version = "0.2.1", features = ["rusqlite"] }
barrel =  { version = "0.6.5", features = ["sqlite3"] }
futures = "0.3.4"
