[package]
name = "gazpacho"
version = "0.1.0"
authors = ["Andrey Cherkashin <andoriyu@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
filedescriptor = "0.7"
getset = "0.1.0"
libc = "0.2"
libzetta = "0.2.2"
regex = "1"
slog = { version = "2", features = ["release_max_level_debug"] }
slog-async = "2.5"
slog-syslog = "0.12"
slog-term = "2"
slog-stdlog = "4"
ssh2 = "0.8.0"
uclicious = "0.1.5"
zstd = { version = "0.5" }
zstd-sys = { version = "1.4", features = ["zstdmt", "zstdmt"], path = "/home/andoriyu/dev/github.com/andoriyu/zstd-rs/zstd-safe/zstd-sys" }
once_cell = "1.3"
actix = "0.10.0-alpha.2"
ctrlc = "3.1"
rusqlite = { version = "0.21", features = ["bundled", "chrono"] }
refinery =  { version = "0.2", features = ["rusqlite"] }
refinery-migrations = { version = "0.2", features = ["rusqlite"] }
barrel =  { version = "0.6", features = ["sqlite3"] }
futures = "0.3.4"
tokio = { version = "0.2", features = ["sync"] }
snafu = "0.6"
[patch.crates-io]
zstd-sys = { version = "1.4", features = ["zstdmt", "zstdmt"], path = "/home/andoriyu/dev/github.com/andoriyu/zstd-rs/zstd-safe/zstd-sys" }
